--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ layout: landing
 								{% endfor %}
 							</header>
 							<!-- UNCOMMENT FOR JAN 2017 meetup <h2>Sponsor</h2>
-							<p>Huge thanks to our October sponsor, <a href="https://data.world/">data.world!</a></p>
-							<img style="width:200px;" src="{{ site.url }}/images/sponsors/data-world-logo.png">
+							<p>Huge thanks to our <MONTH> sponsor, <a href="#">Sponsor Name!</a></p>
+							<img style="width:200px;" src="{{ site.url }}/images/sponsors/#.png">
 						</div> -->
 					</section>
 
